--- a/prometheus_grafana_alert/jk/alertmanager/config.yml
+++ b/prometheus_grafana_alert/jk/alertmanager/config.yml
@@ -4,7 +4,7 @@ route:
   group_by: ['instance']
   group_wait: 30s
   group_interval: 10s
-  repeat_interval: 1m
+  repeat_interval: 1d
   receiver: 'PrometheusAlert'
 receivers:
 - name: 'PrometheusAlert'
