--- a/prometheus_grafana_alert/docker-compose.yml
+++ b/prometheus_grafana_alert/docker-compose.yml
@@ -15,7 +15,7 @@ networks:
 services:
 
   alertmanager:
-    image: prom/alertmanager:v0.23.0
+    image: prom/alertmanager:latest
     container_name: alertmanager
     user: $UID:$GID
     volumes:
@@ -48,11 +48,12 @@ services:
     <<: *logging
 
   prometheus:
-    image: prom/prometheus:v2.29.2
+    image: prom/prometheus:latest
     container_name: prometheus
     user: $UID:$GID
     volumes:
       - ./prometheus:/etc/prometheus
+      - /etc/hosts:/etc/hosts
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/etc/prometheus/storage'
@@ -70,7 +71,7 @@ services:
     <<: *logging
 
   grafana:
-    image: grafana/grafana:8.1.3
+    image: grafana/grafana:latest-ubuntu
     container_name: grafana
     user: $UID:$GID
     volumes:
@@ -83,7 +84,7 @@ services:
       - GF_USERS_ALLOW_SIGN_UP=false
     restart: always
     ports:
-      - 3000:3000
+      - 8080:3000
     networks:
       - monitoring
     labels:
